--- a/shapes-rotation.html
+++ b/shapes-rotation.html
@@ -15,17 +15,17 @@
     <hint> 90 and 45 are good numbers to use. </hint>
 -->
             
-    <a-cylinder 
+    <a-dodecahedron
         position="-2 3 -5"
         color="red"
         rotation="0 0 45"
-    ></a-cylinder>
+    ></a-dodecahedron>
   
-    <a-box 
+    <a-dodecahedron
         position="2 3 -5"
         color="green"
         rotation="0 0 0"
-    ></a-box>
+    ></a-d>
     
     <a-box 
         position="0 1 -5"
