--- a/3dModel-yours.html
+++ b/3dModel-yours.html
@@ -15,6 +15,8 @@
       position="0 -3 2"
       rotation="0 0 0"
       ></a-entity>
+
+      <a-entity ply-model="src: enviroment.ply" position="5.38991 -0.83891 1.87974" rotation="-86.8139921604272 179.9998479605043 179.9998479605043" scale="0.5 0.3 0.5"></a-entity>
                  
     </a-scene>
   </body>
